<resources>
	<string name="app_name">ReLaunch</string>
	<string name="model_warning">&lt;h2&gt;The tool is for Nook Simple Touch or Sony
		PRS-T1 only!&lt;/h2&gt;&lt;br&gt;&lt;center&gt;&lt;b&gt;Continue
		anyway ?&lt;/b&gt;&lt;/center&gt;</string>
	<string name="advanced_layout_switch_wifi_off">WiFi off</string>
	<string name="advanced_layout_setting_wifi">Setup WiFi</string>
	<string name="advanced_layout_scan">Scan</string>
	<string name="advanced_layout_lock">Lock</string>
	<string name="advanced_layout_reboot">Reboot</string>
	<string name="advanced_layout_poweroff">Power Off</string>
	<string name="editor_layout_save">Save</string>
	<string name="editor_layout_viewtitle">== EDITOR ==</string>
	<string name="editor_layout_cancel">Cancel</string>
	<string name="filters_item_layout_rule">Rule:</string>
	<string name="filters_item_layout_value">Value:</string>
	<string name="filters_item_layout_and">AND</string>
	<string name="filters_view_layout_title">Filter Settings</string>
	<string name="filters_view_layout_ok">OK</string>
	<string name="filters_view_layout_add_new">Add new</string>
	<string name="filters_view_layout_and">AND</string>
	<string name="filters_view_layout_cancel">Cancel</string>
	<string name="main_launcher_nb_layout_go_one_level_up">One level up</string>
	<string name="main_launcher_nb_layout_memory">Memory</string>
	<string name="main_launcher_nb_layout_mem">Mem:</string>
	<string name="main_launcher_nb_layout_battery">Battery</string>
	<string name="main_launcher_nb_layout_b">B</string>
	<string name="prefs_layout_title">Settings</string>
	<string name="prefs_layout_filter_setting">Filter setting</string>
	<string name="prefs_layout_associations">Associations</string>
	<string name="prefs_layout_cancel">Cancel</string>
	<string name="prefs_layout_ok">OK</string>
	<string name="prefs_layout_save_restart">Save settings and restart ReLaunch (some settings
		work only after restart)</string>
	<string name="prefs_layout_revert_default">Reset/Backup\n/Restore Settings</string>
	<string name="search_layout_case_sensitive">Case sensitive</string>
	<string name="search_layout_search_known">Search known extensions only</string>
	<string name="search_layout_sort_search">Sort search results</string>
	<string name="search_layout_search_as">Search as</string>
	<string name="search_layout_search_in">Search in</string>
	<string name="search_layout_search_root">Search root</string>
	<string name="search_layout_search_root_comment">May be directory or comma separated directories
		list</string>
	<string name="search_layout_search_string">Search string</string>
	<string name="search_layout_search">Search</string>
	<string name="search_layout_cancel">Cancel</string>
	<string name="search_layout_show_all_books">Show all books (known extensions) from search root
	</string>
	<string name="search_layout_title">Search</string>
	<string name="service_details_layout_kill">Kill</string>
	<string name="service_details_layout_ok">OK</string>
	<string name="service_details_layout_piduid">PID/UID:</string>
	<string name="service_details_layout_label">Label:</string>
	<string name="service_details_layout_name">Name:</string>
	<string name="service_details_layout_flags">Flags:</string>
	<string name="service_details_layout_clients">Clients:</string>
	<string name="service_details_layout_package">Package:</string>
	<string name="service_details_layout_packlabel">Pack. label:</string>
	<string name="service_details_layout_packdetails">Pack. details:</string>
	<string name="task_details_layout_task_details">Task details:</string>
	<string name="task_details_layout_related_packages">Related packages:</string>
	<string name="taskmanager_layout_memory">Memory:</string>
	<string name="taskmanager_layout_cpu">CPU:</string>
	<string name="taskmanager_layout_sort_by_size">Sort by size</string>
	<string name="taskmanager_layout_sort_by_cpu">Sort by CPU</string>
	<string name="taskmanager_layout_sort_by_alpha">Sort alphabetically</string>
	<string name="taskmanager_layout_tasks">Tasks</string>
	<string name="taskmanager_layout_services">Services</string>
	<string name="taskmanager_layout_wait">Wait...</string>
	<string name="types_layout_file_suffix">File suffix:</string>
	<string name="types_layout_application">Application:</string>
	<string name="types_view_layout_ok">OK</string>
	<string name="types_view_layout_add_new">Add new</string>
	<string name="types_view_layout_cancel">Cancel</string>
	<string name="types_view_layout_title">Associations Settings</string>
	<string name="viewer_layout_edit">Edit</string>
	<string name="viewer_layout_title">-- VIEWER --</string>
	<string name="reboot_layout_text">REBOOT\n\nWait...</string>
	<string name="poweroff_layout_text">Powered Off\n\nUse Power button to start again...
	</string>
	<string name="jv_advanced_connected">Connected, IP:</string>
	<string name="jv_advanced_level">Level:</string>
	<string name="jv_advanced_notrange">Not in range</string>
	<string name="jv_advanced_not_configured">not configured</string>
	<string name="jv_advanced_turning_wifi_off">WiFi off...</string>
	<string name="jv_advanced_turn_wifi_off">WiFi off</string>
	<string name="jv_advanced_turning_wifi_on">WiFi on...</string>
	<string name="jv_advanced_turn_wifi_on">WiFi on</string>
	<string name="jv_advanced_title">Advanced functions, info, etc.</string>
	<string name="jv_advanced_reboot_confirm_title">Reboot confirmation</string>
	<string name="jv_advanced_reboot_confirm_text">Are you sure to reboot your device ? </string>
	<string name="jv_advanced_yes">YES</string>
	<string name="jv_advanced_no">NO</string>
	<string name="jv_advanced_poweroff_confirm_title">Power Off confirmation</string>
	<string name="jv_advanced_poweroff_confirm_text">Are you sure to power off your device ? </string>
	<string name="jv_advanced_mount_diskspartitions">Disks/partitions</string>
	<string name="jv_advanced_mount_mountpoint">Mount point</string>
	<string name="jv_advanced_mount_FS">FS</string>
	<string name="jv_advanced_mount_total">total</string>
	<string name="jv_advanced_mount_used">used</string>
	<string name="jv_advanced_mount_free">free</string>
	<string name="jv_advanced_mount_rorw">RO/RW</string>
	<string name="jv_advanced_mount_ro">RO</string>
	<string name="jv_advanced_mount_rw">RW</string>
	<string name="jv_advanced_nook_only">Implemented only on NOOK Simple Touch.</string>
	<string name="jv_advanced_root_only">Implemented only on rooted device.</string>
	<string name="jv_allapp_move_up">Move one position up</string>
	<string name="jv_allapp_move_down">Move one position down</string>
	<string name="jv_allapp_remove">Remove from favorites</string>
	<string name="jv_allapp_uninstall">Uninstall</string>
	<string name="jv_allapp_cancel">Cancel</string>
	<string name="jv_allapp_add">Add to favorites</string>
	<string name="jv_editor_file_too_big">File too big</string>
	<string name="jv_editor_file">File</string>
	<string name="jv_editor_too_big">is too big for editor</string>
	<string name="jv_editor_bytes">kilobytes</string>
	<string name="jv_editor_maximum">Maximal allowed size is</string>
	<string name="jv_editor_ok">OK</string>
	<string name="jv_editor_save_title">Save changes warning</string>
	<string name="jv_editor_save_text">Do you want to save changes?</string>
	<string name="jv_editor_yes">YES</string>
	<string name="jv_editor_no">NO</string>
	<string name="jv_editor_back">Cancel</string>
	<string name="jv_editor_cancel">Cancel</string>
	<string name="jv_editor_openerr_title">Open failure</string>
	<string name="jv_editor_openerr_text1">Can\'t open file</string>
	<string name="jv_editor_openerr_text2">for writting</string>
	<string name="jv_editor_writerr_title">Write failure</string>
	<string name="jv_editor_writerr_text">Can\'t write to file</string>
	<string name="jv_editor_closerr_title">Close failure</string>
	<string name="jv_editor_closerr_text">Can\'t close file</string>
	<string name="jv_filters_value">Filter value:</string>
	<string name="jv_filters_cant_be_empty">Can\'t be empty!</string>
	<string name="jv_filters_ok">OK</string>
	<string name="jv_filters_cancel">Cancel</string>
	<string name="jv_filters_and">AND</string>
	<string name="jv_filters_or">OR</string>
	<string name="jv_prefs_select_number">Select number</string>
	<string name="jv_prefs_select_application">Select application</string>
	<string name="jv_prefs_ok">OK</string>
	<string name="jv_prefs_decline_changes_title">Decline changes warning</string>
	<string name="jv_prefs_decline_changes_text">Do you want to save all configuration\'s changes?
	</string>
	<string name="jv_prefs_default_settings_title">Default settings warning</string>
	<string name="jv_prefs_default_settings_text">Are you sure to restore default settings?</string>
	<string name="jv_prefs_yes">Yes</string>
	<string name="jv_prefs_no">No</string>
	<string name="jv_prefs_cancel">Cancel</string>
	<string name="jv_prefs_rsr_reset">Revert all settings to default values</string>
	<string name="jv_prefs_rsr_save">Save settings to SD Card</string>
	<string name="jv_prefs_rsr_restore">Restore settings from SD Card</string>
	<string name="jv_prefs_rsr_ok_title">Success!</string>
	<string name="jv_prefs_rsr_ok_text">Operation finished successfully</string>
	<string name="jv_prefs_rsr_okrst_text">Operation finished successfully\nProgram will be
		restart with new settings</string>
	<string name="jv_prefs_rsr_fail_title">Error!</string>
	<string name="jv_prefs_rsr_fail_text">Unable to perfom operation</string>
	<string name="jv_prefs_cleanup_database_title">Database operations</string>
	<string name="jv_prefs_cleanup_database_text">Do you really want to cleanup cache?</string>
	<string name="jv_prefs_clear_lists_title">Lists operations</string>
	<string name="jv_prefs_clear_lru_text">Do you really want to clear \"Last Opened\" list?
	</string>
	<string name="jv_prefs_clear_favorites_text">Do you really want to clear Favorites list?
	</string>
	<string name="jv_relaunch_wrong_model">Wrong model!</string>
	<string name="jv_relaunch_yes">YES</string>
	<string name="jv_relaunch_no">NO</string>
	<string name="jv_relaunch_m_free">M free</string>
	<string name="jv_relaunch_wifi_is_off">WiFi is off</string>
	<string name="jv_relaunch_wifi_is_on">WiFi is ON</string>
	<string name="jv_relaunch_select_application">Select application</string>
	<string name="jv_relaunch_lru_a">Last recently used applications</string>
	<string name="jv_relaunch_all_a">All applications</string>
	<string name="jv_relaunch_fav_a">Favorite applications</string>
	<string name="jv_relaunch_whats_new">What\'s new</string>
	<string name="jv_relaunch_ok">OK</string>
	<string name="jv_relaunch_add">Add to favorites</string>
	<string name="jv_relaunch_mark">Mark as read</string>
	<string name="jv_relaunch_unmark">Remove \"read\" mark</string>
	<string name="jv_relaunch_unmarkall">Forget all marks</string>
	<string name="jv_relaunch_openwith">Open with ...</string>
	<string name="jv_relaunch_createintent">Create Intent ...</string>
	<string name="jv_relaunch_copy">Copy</string>
	<string name="jv_relaunch_move">Move</string>
	<string name="jv_relaunch_move_dir">Move</string>
	<string name="jv_relaunch_paste">Paste</string>
	<string name="jv_relaunch_rename">Rename...</string>
	<string name="jv_relaunch_create_folder">Create new folder...</string>
	<string name="jv_relaunch_create_folder_title">Enter the name of new folder</string>
	<string name="jv_relaunch_create_folder_fail_text">Unable to create the folder</string>
	<string name="jv_relaunch_rename_title">Enter new name of file</string>
	<string name="jv_relaunch_delete">Delete</string>
	<string name="jv_relaunch_delete_non_emp_dir">Delete NON-EMPTY directory!</string>
	<string name="jv_relaunch_delete_emp_dir">Delete empty directory</string>
	<string name="jv_relaunch_cancel">Cancel</string>
	<string name="jv_relaunch_select_intent_type">Select intent type</string>
</resources>