<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:background="@color/normal_bg" android:padding="8dp">
    <LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout5" android:layout_height="wrap_content" android:minHeight="72dp">
        <Button android:text="@string/service_details_layout_kill" android:layout_width="fill_parent" android:layout_weight="1" android:layout_gravity="center" android:id="@+id/tm2_kill" android:layout_height="fill_parent"></Button>
        <Button android:text="@string/service_details_layout_ok" android:layout_width="fill_parent" android:layout_gravity="center" android:layout_weight="0.3" android:gravity="center" android:id="@+id/tm2_ok" android:layout_height="fill_parent" android:layout_marginLeft="4dp"></Button>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:layout_height="wrap_content">
        <LinearLayout android:layout_height="fill_parent" android:id="@+id/linearLayout2" android:orientation="vertical" android:layout_width="fill_parent" android:layout_weight="1" android:layout_marginRight="1dp">
            <TextView android:id="@+id/textView2" android:textColor="#000000" android:background="#ffffff" android:text="@string/service_details_layout_piduid" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="right" android:layout_width="fill_parent" android:gravity="right" android:layout_marginBottom="1dp"></TextView>
            <TextView android:id="@+id/textView3" android:textColor="#000000" android:background="#ffffff" android:text="@string/service_details_layout_label" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="right" android:layout_width="fill_parent" android:gravity="right" android:layout_marginBottom="1dp"></TextView>
            <TextView android:id="@+id/textView6" android:textColor="#000000" android:background="#ffffff" android:text="@string/service_details_layout_name" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="right" android:layout_width="fill_parent" android:gravity="right" android:layout_marginBottom="1dp"></TextView>
            <TextView android:id="@+id/textView9" android:textColor="#000000" android:background="#ffffff" android:text="@string/service_details_layout_flags" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="right" android:layout_width="fill_parent" android:gravity="right" android:layout_marginBottom="1dp"></TextView>
            <TextView android:id="@+id/textView9" android:textColor="#000000" android:background="#ffffff" android:text="@string/service_details_layout_clients" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="right" android:layout_width="fill_parent" android:gravity="right" android:layout_marginBottom="1dp"></TextView>
            <TextView android:id="@+id/textView9" android:textColor="#000000" android:background="#ffffff" android:text="@string/service_details_layout_package" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="right" android:layout_width="fill_parent" android:gravity="right" android:layout_marginBottom="1dp"></TextView>
            <TextView android:id="@+id/textView9" android:textColor="#000000" android:background="#ffffff" android:text="@string/service_details_layout_packlabel" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="right" android:layout_width="fill_parent" android:gravity="right" android:layout_marginBottom="1dp"></TextView>
            <TextView android:id="@+id/textView9" android:textColor="#000000" android:background="#ffffff" android:text="@string/service_details_layout_packdetails" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="right" android:layout_width="fill_parent" android:gravity="right" android:layout_marginBottom="1dp"></TextView>
        </LinearLayout>
        <LinearLayout android:layout_height="fill_parent" android:orientation="vertical" android:layout_width="fill_parent" android:id="@+id/linearLayout3" android:layout_weight="0.38">
            <TextView android:textColor="#000000" android:background="#ffffff" android:text="TextView" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="center" android:gravity="center" android:layout_width="fill_parent" android:id="@+id/tm2_pid" android:layout_marginBottom="1dp"></TextView>
            <TextView android:textColor="#000000" android:background="#ffffff" android:text="TextView" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="center" android:gravity="center" android:layout_width="fill_parent" android:id="@+id/tm2_label" android:layout_marginBottom="1dp"></TextView>
            <TextView android:textColor="#000000" android:background="#ffffff" android:text="TextView" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="center" android:gravity="center" android:layout_width="fill_parent" android:id="@+id/tm2_name" android:layout_marginBottom="1dp"></TextView>
            <TextView android:textColor="#000000" android:background="#ffffff" android:text="TextView" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="center" android:gravity="center" android:layout_width="fill_parent" android:id="@+id/tm2_extra" android:layout_marginBottom="1dp"></TextView>
            <TextView android:textColor="#000000" android:background="#ffffff" android:text="TextView" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="center" android:gravity="center" android:layout_width="fill_parent" android:id="@+id/tm2_clients" android:layout_marginBottom="1dp"></TextView>
            <TextView android:textColor="#000000" android:background="#ffffff" android:text="TextView" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="center" android:gravity="center" android:layout_width="fill_parent" android:id="@+id/tm2_clientp" android:layout_marginBottom="1dp"></TextView>
            <TextView android:textColor="#000000" android:background="#ffffff" android:text="TextView" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="center" android:gravity="center" android:layout_width="fill_parent" android:id="@+id/tm2_clientl" android:layout_marginBottom="1dp"></TextView>
            <TextView android:textColor="#000000" android:background="#ffffff" android:text="TextView" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="center" android:gravity="center" android:layout_width="fill_parent" android:id="@+id/tm2_clientd" android:layout_marginBottom="1dp"></TextView>
        </LinearLayout>
    </LinearLayout>
    <!--
    <LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout5" android:layout_height="fill_parent" android:layout_weight="1">
        <Button android:text="Kill" android:layout_width="fill_parent" android:layout_weight="1" android:layout_gravity="center" android:layout_height="fill_parent" android:id="@+id/tm2_kill"></Button>
        <Button android:text="OK" android:layout_width="fill_parent" android:layout_gravity="center" android:layout_weight="0.3" android:gravity="center" android:layout_height="fill_parent" android:id="@+id/tm2_ok"></Button>
    </LinearLayout>
    -->
    
</LinearLayout>
